[gd_scene load_steps=10 format=2]

[ext_resource path="res://tutoriales/assets/btn_rightpressed.png" type="Texture" id=1]
[ext_resource path="res://tutoriales/assets/btn_left.png" type="Texture" id=2]
[ext_resource path="res://tutoriales/assets/btn_right.png" type="Texture" id=3]
[ext_resource path="res://menus/assets/btn_exitpressed.png" type="Texture" id=4]
[ext_resource path="res://tutoriales/assets/btn_leftpressed.png" type="Texture" id=5]
[ext_resource path="res://tutoriales/assets/tutorial_img.png" type="Texture" id=6]
[ext_resource path="res://menus/assets/btn_exit.png" type="Texture" id=7]
[ext_resource path="res://tutoriales/juegocompararydecidir/tutoCompararyDecidir.gd" type="Script" id=8]
[ext_resource path="res://tutoriales/assets/cyd.png" type="Texture" id=9]

[node name="Tutorial_cyd" type="Control"]
anchor_left = 0.5
anchor_top = 0.526
anchor_right = 0.511
anchor_bottom = 0.526
margin_left = -15.0
margin_top = -20.304
margin_right = 20.072
margin_bottom = 19.696
script = ExtResource( 8 )

[node name="TutoriaCyd" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -181.0
margin_top = -558.0
margin_right = 170.0
margin_bottom = -69.0

[node name="TextureRect" type="TextureRect" parent="TutoriaCyd"]
margin_left = -2.0
margin_top = -39.0
margin_right = 353.0
margin_bottom = 491.0
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="TutoriaCyd" groups=["tutorial"]]
position = Vector2( 175.5, 211 )
texture = ExtResource( 9 )
hframes = 21

[node name="flecha_izq" type="TextureButton" parent="TutoriaCyd"]
margin_left = 31.5
margin_top = 410.0
margin_right = 95.5
margin_bottom = 474.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )

[node name="flecha_der" type="TextureButton" parent="TutoriaCyd"]
margin_left = 255.5
margin_top = 409.0
margin_right = 319.5
margin_bottom = 473.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="btn_salir" type="TextureButton" parent="TutoriaCyd"]
margin_left = 319.0
margin_top = -47.0
margin_right = 383.0
margin_bottom = 17.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )

[connection signal="button_up" from="TutoriaCyd/flecha_izq" to="." method="_on_flecha_izq_button_up"]
[connection signal="button_up" from="TutoriaCyd/flecha_der" to="." method="_on_flecha_der_button_up"]
